cluster/apps/rancher/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - rancher.example.com
    secretName: tls-rancher-ingress
  rules:
  - host: rancher.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rancher
            port:
              number: 80
